# socratic-ui

./: .gitignore  package-lock.json  package.json
app/: _layout.tsx  home.tsx
project/: App.tsx  README.md  index.js  package-lock.json  package.json
project/__tests__/: analytics.test.ts
project/_backups/: 2025-08-26_0134_index.js
project/app/: _layout.tsx  signin.tsx  signup.tsx
project/backend/: .env.example  Dockerfile  achievements_models.py  auth.py  auth_endpoints.py  content_filter.py  doc_chat_endpoints.py  documents_endpoints.py  extended_models.py  load_keypair.py  main.py  main_simple.py  message_models.py  pdf_handler.py  rate_limiter.py  redis_pubsub.py  requirements.txt  restart_services.sh  room_endpoints.py  socratic_ai.py  tasks.py  tasks_storage.py  wallet_endpoints.py  websocket_auth.py
project/components/: ChatMessage.tsx  ChatRoomScreen.tsx  ConnectWalletButton.tsx  DocumentCard.tsx  DocumentUploadCard.tsx  LoadingSpinner.tsx  MessageBubble.tsx  MintInsightButton.tsx  NFTCard.tsx  NotificationCard.tsx  RoomChatInterface.tsx  RoomHeader.tsx  RoomList.tsx  SearchBar.tsx  SmartSuggestions.tsx  SoulboundProgressBar.tsx  StudyRoomCard.tsx  TokenTrackerBar.tsx  TokenWalletView.tsx  UploadModal.tsx
project/context/: AuthContext.tsx  BookmarksContext.tsx  DrawerContext.tsx  RewardsContext.tsx  ThemeContext.tsx  WalletContext.tsx  auth.tsx
project/data/: books.ts
project/dist-server/: index.js
project/docs/: UPLOAD_QA.md
project/socratic_token/programs/doc-chat/: Cargo.toml
project/socratic_token/programs/doc-chat/src/: lib.rs
(+68 files in other folders)
