[package]
name = "socratic_token"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "socratic_token"

[features]
default = ["custom-heap", "custom-panic", "anchor-debug"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []


[dependencies]
anchor-lang = { version = "=0.31.1" , features = ["init-if-needed"]}
anchor-spl = "=0.31.1"
solana-program = "=2.3.0"


